--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -120,6 +120,7 @@
     <ClInclude Include="MyUtil.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="t_Scene.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoneHierachy.cpp" />
@@ -163,6 +164,7 @@
     <ClCompile Include="cXMesh_Skinned.cpp" />
     <ClCompile Include="cXMesh_Static.cpp" />
     <ClCompile Include="MyUtil.cpp" />
+    <ClCompile Include="t_Scene.cpp" />
     <ClCompile Include="WinMain.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
