--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -123,6 +123,7 @@
     <ClInclude Include="cXMesh_Static.h" />
     <ClInclude Include="move_Test.h" />
     <ClInclude Include="MyUtil.h" />
+    <ClInclude Include="sector_Test.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="t_Scene.h" />
@@ -173,6 +174,7 @@
     <ClCompile Include="cXMesh_Static.cpp" />
     <ClCompile Include="move_Test.cpp" />
     <ClCompile Include="MyUtil.cpp" />
+    <ClCompile Include="sector_Test.cpp" />
     <ClCompile Include="t_Scene.cpp" />
     <ClCompile Include="WinMain.cpp" />
     <ClCompile Include="stdafx.cpp">
