--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClInclude Include="camera_Test.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="sector_Test.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -318,6 +321,9 @@
       <Filter>Handler</Filter>
     </ClCompile>
     <ClCompile Include="camera_Test.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="sector_Test.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
   </ItemGroup>
