--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -122,11 +122,13 @@
     <ClInclude Include="cXMesh.h" />
     <ClInclude Include="cXMesh_Skinned.h" />
     <ClInclude Include="cXMesh_Static.h" />
+    <ClInclude Include="moveClass.h" />
     <ClInclude Include="move_Test.h" />
     <ClInclude Include="MyUtil.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="t_Scene.h" />
+    <ClInclude Include="move_Test2.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="animation_Test.cpp" />
@@ -173,7 +175,9 @@
     <ClCompile Include="cXMesh.cpp" />
     <ClCompile Include="cXMesh_Skinned.cpp" />
     <ClCompile Include="cXMesh_Static.cpp" />
+    <ClCompile Include="moveClass.cpp" />
     <ClCompile Include="move_Test.cpp" />
+    <ClCompile Include="move_Test2.cpp" />
     <ClCompile Include="MyUtil.cpp" />
     <ClCompile Include="t_Scene.cpp" />
     <ClCompile Include="WinMain.cpp" />
