Player, command test
input handler에 command 추가해서 테스트

--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -100,6 +100,7 @@
     <ClInclude Include="cParticle.h" />
     <ClInclude Include="cParticleQuad.h" />
     <ClInclude Include="cPhysicManager.h" />
+    <ClInclude Include="cPlayer.h" />
     <ClInclude Include="cQuadParticleEmitter.h" />
     <ClInclude Include="cQuadTree.h" />
     <ClInclude Include="cResourceMgr_XSkinnedMesh.h" />
@@ -111,11 +112,14 @@
     <ClInclude Include="cSceneChangeEffect.h" />
     <ClInclude Include="cSceneChangeEffectUpDown.h" />
     <ClInclude Include="cScene_Mgr.h" />
+    <ClInclude Include="cScene_testPlayer.h" />
     <ClInclude Include="cSetBoundObject.h" />
     <ClInclude Include="cSingletonBase.h" />
     <ClInclude Include="cSkinnedAnimation.h" />
     <ClInclude Include="cSpriteManager.h" />
     <ClInclude Include="cTerrain.h" />
+    <ClInclude Include="cTestCommand.h" />
+    <ClInclude Include="cTestCommand2.h" />
     <ClInclude Include="cTimeMgr.h" />
     <ClInclude Include="cTransform.h" />
     <ClInclude Include="cXMesh.h" />
@@ -150,6 +154,7 @@
     <ClCompile Include="cParticle.cpp" />
     <ClCompile Include="cParticleQuad.cpp" />
     <ClCompile Include="cPhysicManager.cpp" />
+    <ClCompile Include="cPlayer.cpp" />
     <ClCompile Include="cQuadParticleEmitter.cpp" />
     <ClCompile Include="cQuadTree.cpp" />
     <ClCompile Include="cResourceMgr_XSkinnedMesh.cpp" />
@@ -161,11 +166,14 @@
     <ClCompile Include="cSceneChangeEffect.cpp" />
     <ClCompile Include="cSceneChangeEffectUpDown.cpp" />
     <ClCompile Include="cScene_Mgr.cpp" />
+    <ClCompile Include="cScene_testPlayer.cpp" />
     <ClCompile Include="cSetBoundObject.cpp" />
     <ClCompile Include="cSingletonBase.cpp" />
     <ClCompile Include="cSkinnedAnimation.cpp" />
     <ClCompile Include="cSpriteManager.cpp" />
     <ClCompile Include="cTerrain.cpp" />
+    <ClCompile Include="cTestCommand.cpp" />
+    <ClCompile Include="cTestCommand2.cpp" />
     <ClCompile Include="cTimeMgr.cpp" />
     <ClCompile Include="cTransform.cpp" />
     <ClCompile Include="cXMesh.cpp" />
