sector_test씬 바운드 세개추가
바운드박스 추가

--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClInclude Include="sector_Test.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="animation_Test.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -324,6 +327,9 @@
       <Filter>Scenes</Filter>
     </ClCompile>
     <ClCompile Include="sector_Test.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="animation_Test.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
   </ItemGroup>
