--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -34,6 +34,9 @@
     <Filter Include="Component">
       <UniqueIdentifier>{8d2a1705-2813-409f-9e6c-6b5d6da36a26}</UniqueIdentifier>
     </Filter>
+    <Filter Include="FSM">
+      <UniqueIdentifier>{f41a2d0c-2ca1-47ef-80d7-29ff422ff933}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -111,12 +114,6 @@
     <ClInclude Include="cBaseObject.h">
       <Filter>BaseObject</Filter>
     </ClInclude>
-    <ClInclude Include="cBoundSphere.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="cBoundBox.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="cPhysicManager.h">
       <Filter>Managers</Filter>
     </ClInclude>
@@ -137,9 +134,6 @@
     </ClInclude>
     <ClInclude Include="cSkinnedAnimation.h">
       <Filter>Common</Filter>
-    </ClInclude>
-    <ClInclude Include="cSpriteManager.h">
-      <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="cPartcleEmitter.h">
       <Filter>Common</Filter>
@@ -191,6 +185,42 @@
     </ClInclude>
     <ClInclude Include="cTestCommand2.h">
       <Filter>Handler</Filter>
+    </ClInclude>
+    <ClInclude Include="animation_Test.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="move_Test2.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="moveClass.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="sector_Test.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="cMonster.h">
+      <Filter>GameActor</Filter>
+    </ClInclude>
+    <ClInclude Include="cState.h">
+      <Filter>FSM</Filter>
+    </ClInclude>
+    <ClInclude Include="cIdleState.h">
+      <Filter>FSM</Filter>
+    </ClInclude>
+    <ClInclude Include="cStateHandler.h">
+      <Filter>FSM</Filter>
+    </ClInclude>
+    <ClInclude Include="cSpriteManager.h">
+      <Filter>Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="cBoundBox.h">
+      <Filter>BaseObject</Filter>
+    </ClInclude>
+    <ClInclude Include="cBoundSphere.h">
+      <Filter>BaseObject</Filter>
+    </ClInclude>
+    <ClInclude Include="cMoveState.h">
+      <Filter>FSM</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -269,12 +299,6 @@
     <ClCompile Include="cBaseObject.cpp">
       <Filter>BaseObject</Filter>
     </ClCompile>
-    <ClCompile Include="cBoundSphere.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="cBoundBox.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="cPhysicManager.cpp">
       <Filter>Managers</Filter>
     </ClCompile>
@@ -295,9 +319,6 @@
     </ClCompile>
     <ClCompile Include="cSkinnedAnimation.cpp">
       <Filter>Common</Filter>
-    </ClCompile>
-    <ClCompile Include="cSpriteManager.cpp">
-      <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="cParticle.cpp">
       <Filter>Common</Filter>
@@ -349,6 +370,42 @@
     </ClCompile>
     <ClCompile Include="cTestCommand2.cpp">
       <Filter>Handler</Filter>
+    </ClCompile>
+    <ClCompile Include="animation_Test.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="move_Test2.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="moveClass.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="sector_Test.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="cMonster.cpp">
+      <Filter>GameActor</Filter>
+    </ClCompile>
+    <ClCompile Include="cState.cpp">
+      <Filter>FSM</Filter>
+    </ClCompile>
+    <ClCompile Include="cIdleState.cpp">
+      <Filter>FSM</Filter>
+    </ClCompile>
+    <ClCompile Include="cStateHandler.cpp">
+      <Filter>FSM</Filter>
+    </ClCompile>
+    <ClCompile Include="cSpriteManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="cBoundBox.cpp">
+      <Filter>BaseObject</Filter>
+    </ClCompile>
+    <ClCompile Include="cBoundSphere.cpp">
+      <Filter>BaseObject</Filter>
+    </ClCompile>
+    <ClCompile Include="cMoveState.cpp">
+      <Filter>FSM</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
