--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -89,7 +89,6 @@
     <ClInclude Include="cDXFontManager.h" />
     <ClInclude Include="cFrustum.h" />
     <ClInclude Include="cGizmoManager.h" />
-    <ClInclude Include="cIdleState.h" />
     <ClInclude Include="cImage.h" />
     <ClInclude Include="cInputHandler.h" />
     <ClInclude Include="cKeyMgr.h" />
@@ -99,7 +98,6 @@
     <ClInclude Include="cLogMgr.h" />
     <ClInclude Include="cMainGame.h" />
     <ClInclude Include="cMonster.h" />
-    <ClInclude Include="cMoveState.h" />
     <ClInclude Include="cPartcleEmitter.h" />
     <ClInclude Include="cParticle.h" />
     <ClInclude Include="cParticleQuad.h" />
@@ -121,13 +119,12 @@
     <ClInclude Include="cSingletonBase.h" />
     <ClInclude Include="cSkinnedAnimation.h" />
     <ClInclude Include="cSpriteManager.h" />
-    <ClInclude Include="cState.h" />
-    <ClInclude Include="cStateHandler.h" />
     <ClInclude Include="cTerrain.h" />
     <ClInclude Include="cTestCommand.h" />
     <ClInclude Include="cTestCommand2.h" />
     <ClInclude Include="cTimeMgr.h" />
     <ClInclude Include="cTransform.h" />
+    <ClInclude Include="cWayPoint.h" />
     <ClInclude Include="cXMesh.h" />
     <ClInclude Include="cXMesh_Skinned.h" />
     <ClInclude Include="cXMesh_Static.h" />
@@ -152,7 +149,6 @@
     <ClCompile Include="cDXFontManager.cpp" />
     <ClCompile Include="cFrustum.cpp" />
     <ClCompile Include="cGizmoManager.cpp" />
-    <ClCompile Include="cIdleState.cpp" />
     <ClCompile Include="cImage.cpp" />
     <ClCompile Include="cInputHandler.cpp" />
     <ClCompile Include="cKeyMgr.cpp" />
@@ -162,7 +158,6 @@
     <ClCompile Include="cLogMgr.cpp" />
     <ClCompile Include="cMainGame.cpp" />
     <ClCompile Include="cMonster.cpp" />
-    <ClCompile Include="cMoveState.cpp" />
     <ClCompile Include="cPartcleEmitter.cpp" />
     <ClCompile Include="cParticle.cpp" />
     <ClCompile Include="cParticleQuad.cpp" />
@@ -184,13 +179,12 @@
     <ClCompile Include="cSingletonBase.cpp" />
     <ClCompile Include="cSkinnedAnimation.cpp" />
     <ClCompile Include="cSpriteManager.cpp" />
-    <ClCompile Include="cState.cpp" />
-    <ClCompile Include="cStateHandler.cpp" />
     <ClCompile Include="cTerrain.cpp" />
     <ClCompile Include="cTestCommand.cpp" />
     <ClCompile Include="cTestCommand2.cpp" />
     <ClCompile Include="cTimeMgr.cpp" />
     <ClCompile Include="cTransform.cpp" />
+    <ClCompile Include="cWayPoint.cpp" />
     <ClCompile Include="cXMesh.cpp" />
     <ClCompile Include="cXMesh_Skinned.cpp" />
     <ClCompile Include="cXMesh_Static.cpp" />
