--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -34,9 +34,6 @@
     <Filter Include="Component">
       <UniqueIdentifier>{8d2a1705-2813-409f-9e6c-6b5d6da36a26}</UniqueIdentifier>
     </Filter>
-    <Filter Include="FSM">
-      <UniqueIdentifier>{f41a2d0c-2ca1-47ef-80d7-29ff422ff933}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -201,15 +198,6 @@
     <ClInclude Include="cMonster.h">
       <Filter>GameActor</Filter>
     </ClInclude>
-    <ClInclude Include="cState.h">
-      <Filter>FSM</Filter>
-    </ClInclude>
-    <ClInclude Include="cIdleState.h">
-      <Filter>FSM</Filter>
-    </ClInclude>
-    <ClInclude Include="cStateHandler.h">
-      <Filter>FSM</Filter>
-    </ClInclude>
     <ClInclude Include="cSpriteManager.h">
       <Filter>Managers</Filter>
     </ClInclude>
@@ -219,8 +207,8 @@
     <ClInclude Include="cBoundSphere.h">
       <Filter>BaseObject</Filter>
     </ClInclude>
-    <ClInclude Include="cMoveState.h">
-      <Filter>FSM</Filter>
+    <ClInclude Include="cWayPoint.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -386,15 +374,6 @@
     <ClCompile Include="cMonster.cpp">
       <Filter>GameActor</Filter>
     </ClCompile>
-    <ClCompile Include="cState.cpp">
-      <Filter>FSM</Filter>
-    </ClCompile>
-    <ClCompile Include="cIdleState.cpp">
-      <Filter>FSM</Filter>
-    </ClCompile>
-    <ClCompile Include="cStateHandler.cpp">
-      <Filter>FSM</Filter>
-    </ClCompile>
     <ClCompile Include="cSpriteManager.cpp">
       <Filter>Managers</Filter>
     </ClCompile>
@@ -404,8 +383,8 @@
     <ClCompile Include="cBoundSphere.cpp">
       <Filter>BaseObject</Filter>
     </ClCompile>
-    <ClCompile Include="cMoveState.cpp">
-      <Filter>FSM</Filter>
+    <ClCompile Include="cWayPoint.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
