mage추가 후 테스트중
테스트

--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -195,20 +195,41 @@
     <ClInclude Include="cTestCommand2.h">
       <Filter>Handler</Filter>
     </ClInclude>
-    <ClInclude Include="animation_Test.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="sector_Test.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="move_Test2.h">
       <Filter>Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="moveClass.h">
-      <Filter>ObjClass</Filter>
-    </ClInclude>
     <ClInclude Include="cSoundManager.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="cIdleState.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="cMoveState.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="cMonster.h">
+      <Filter>GameActor</Filter>
+    </ClInclude>
+    <ClInclude Include="animation_Test.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="sector_Test.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="cState.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="cStateHandler.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="moveClass.h">
+      <Filter>GameActor</Filter>
+    </ClInclude>
+    <ClInclude Include="cMage.h">
+      <Filter>GameActor</Filter>
+    </ClInclude>
+    <ClInclude Include="cBaseskill.h">
+      <Filter>Component</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -368,20 +389,44 @@
     <ClCompile Include="cTestCommand2.cpp">
       <Filter>Handler</Filter>
     </ClCompile>
-    <ClCompile Include="animation_Test.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="sector_Test.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="move_Test2.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="moveClass.cpp">
-      <Filter>ObjClass</Filter>
-    </ClCompile>
     <ClCompile Include="cSoundManager.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cIdleState.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cMoveState.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cMonster.cpp">
+      <Filter>GameActor</Filter>
+    </ClCompile>
+    <ClCompile Include="animation_Test.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="animation_Test_backup.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="sector_Test.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="cState.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="cStateHandler.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="moveClass.cpp">
+      <Filter>GameActor</Filter>
+    </ClCompile>
+    <ClCompile Include="cMage.cpp">
+      <Filter>GameActor</Filter>
+    </ClCompile>
+    <ClCompile Include="cBaseskill.cpp">
+      <Filter>Component</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
