--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -22,7 +22,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -82,6 +82,7 @@
     <ClInclude Include="BoneHierachy.h" />
     <ClInclude Include="camera_Test.h" />
     <ClInclude Include="cBaseObject.h" />
+    <ClInclude Include="cBaseskill.h" />
     <ClInclude Include="cBoundBox.h" />
     <ClInclude Include="cBoundSphere.h" />
     <ClInclude Include="cCamera.h" />
@@ -97,6 +98,7 @@
     <ClInclude Include="cLight_Direction.h" />
     <ClInclude Include="cLight_Point.h" />
     <ClInclude Include="cLogMgr.h" />
+    <ClInclude Include="cMage.h" />
     <ClInclude Include="cMainGame.h" />
     <ClInclude Include="cMonster.h" />
     <ClInclude Include="cMoveState.h" />
@@ -143,9 +145,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="animation_Test.cpp" />
+    <ClCompile Include="animation_Test_backup.cpp" />
     <ClCompile Include="BoneHierachy.cpp" />
     <ClCompile Include="camera_Test.cpp" />
     <ClCompile Include="cBaseObject.cpp" />
+    <ClCompile Include="cBaseskill.cpp" />
     <ClCompile Include="cBoundBox.cpp" />
     <ClCompile Include="cBoundSphere.cpp" />
     <ClCompile Include="cCamera.cpp" />
@@ -161,6 +165,7 @@
     <ClCompile Include="cLight_Direction.cpp" />
     <ClCompile Include="cLight_Point.cpp" />
     <ClCompile Include="cLogMgr.cpp" />
+    <ClCompile Include="cMage.cpp" />
     <ClCompile Include="cMainGame.cpp" />
     <ClCompile Include="cMonster.cpp" />
     <ClCompile Include="cMoveState.cpp" />
