--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="cXMesh.h" />
     <ClInclude Include="cXMesh_Skinned.h" />
     <ClInclude Include="cXMesh_Static.h" />
+    <ClInclude Include="mage_Test.h" />
     <ClInclude Include="moveClass.h" />
     <ClInclude Include="move_Test.h" />
     <ClInclude Include="MyUtil.h" />
@@ -197,6 +198,7 @@
     <ClCompile Include="cXMesh.cpp" />
     <ClCompile Include="cXMesh_Skinned.cpp" />
     <ClCompile Include="cXMesh_Static.cpp" />
+    <ClCompile Include="mage_Test.cpp" />
     <ClCompile Include="moveClass.cpp" />
     <ClCompile Include="move_Test.cpp" />
     <ClCompile Include="move_Test2.cpp" />
