--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -225,6 +225,9 @@
     <ClInclude Include="moveClass.h">
       <Filter>Component</Filter>
     </ClInclude>
+    <ClInclude Include="monster_Test.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -418,6 +421,9 @@
     </ClCompile>
     <ClCompile Include="moveClass.cpp">
       <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="monster_Test.cpp">
+      <Filter>Scenes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
