--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -45,9 +45,6 @@
     <ClInclude Include="cMainGame.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="cImage.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="cTimeMgr.h">
       <Filter>Managers</Filter>
     </ClInclude>
@@ -225,6 +222,9 @@
     <ClInclude Include="moveClass.h">
       <Filter>Component</Filter>
     </ClInclude>
+    <ClInclude Include="cImage.h">
+      <Filter>Common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -234,9 +234,6 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="cMainGame.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="cImage.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="cTimeMgr.cpp">
@@ -418,6 +415,9 @@
     </ClCompile>
     <ClCompile Include="moveClass.cpp">
       <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="cImage.cpp">
+      <Filter>Common</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
