필터 깨져서 다시 올림

--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -222,13 +222,11 @@
     <ClInclude Include="moveClass.h">
       <Filter>Component</Filter>
     </ClInclude>
-<<<<<<< HEAD
-    <ClInclude Include="cImage.h">
-      <Filter>Common</Filter>
-=======
     <ClInclude Include="monster_Test.h">
       <Filter>Scenes</Filter>
->>>>>>> origin/master
+    </ClInclude>
+    <ClInclude Include="cImage.h">
+      <Filter>Common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -421,13 +419,11 @@
     <ClCompile Include="moveClass.cpp">
       <Filter>Component</Filter>
     </ClCompile>
-<<<<<<< HEAD
-    <ClCompile Include="cImage.cpp">
-      <Filter>Common</Filter>
-=======
     <ClCompile Include="monster_Test.cpp">
       <Filter>Scenes</Filter>
->>>>>>> origin/master
+    </ClCompile>
+    <ClCompile Include="cImage.cpp">
+      <Filter>Common</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
