--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="cTestCommand2.h" />
     <ClInclude Include="cTimeMgr.h" />
     <ClInclude Include="cTransform.h" />
+    <ClInclude Include="cSkillUi.h" />
     <ClInclude Include="cWayPoint.h" />
     <ClInclude Include="cXMesh.h" />
     <ClInclude Include="cXMesh_Skinned.h" />
@@ -194,6 +195,7 @@
     <ClCompile Include="cTestCommand2.cpp" />
     <ClCompile Include="cTimeMgr.cpp" />
     <ClCompile Include="cTransform.cpp" />
+    <ClCompile Include="cSkillUi.cpp" />
     <ClCompile Include="cWayPoint.cpp" />
     <ClCompile Include="cXMesh.cpp" />
     <ClCompile Include="cXMesh_Skinned.cpp" />
